--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CouchDB client with Promises",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "keywords": [
     "couch",
@@ -13,5 +13,9 @@
     "promises"
   ],
   "author": "Bartosz Niziolek <exys666@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^3.4.0",
+    "mocha": "^2.3.3"
+  }
 }
