--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.4.0",
-    "mocha": "^2.3.3"
+    "chai-as-promised": "^5.1.0",
+    "mocha": "^2.3.3",
+    "nock": "^2.16.0"
   }
 }
