--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "chai": "^3.4.0",
     "chai-as-promised": "^5.1.0",
+    "eslint": "^1.7.3",
     "mocha": "^2.3.3",
     "nock": "^2.16.0"
   }
